# eoAPI

./: .dockerignore  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  404.html  CHANGES.md  CNAME  CONTRIBUTING.md  Dockerfile.features  Dockerfile.raster  Dockerfile.stac  Dockerfile.tiler  Dockerfile.vector  LICENSE  Makefile  README.md  cdk.json  docker-compose.custom.yml  docker-compose.official.yml  docker-compose.uvicorn.yml  docker-compose.yml  index.html  package-lock.json  package.json  requirements-cdk.txt  ruff.toml  setup.cfg
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-docker-images.yml  ci.yml  deploy_mkdocs.yml
.github/workflows/data/: my_data.sql  noaa-eri-nashville2020.json
.github/workflows/tests/: test_eoapi.py  test_features.py  test_raster.py  test_stac.py  test_vector.py
architecture/: README.md  intra_domain_architecture.mmd
auth/authentication/: eoapi-realm.json  keycloak-init.sh
auth/keycloak/: eoapi-realm.json  eoapi-users-0.json  stac-api._json
contributing/: index.html
customization/: index.html
demo/: README.md  demo.ipynb  load-demos.sh  requirements.txt
demo/Maxar/: eoAPI_Maxar_demo.ipynb
demo/cmip6/: CMIP6_daily_GISS-E2-1-G_tas_collection.json  generate_cmip6_items.ipynb  seed-db.sh
demo/facebook/: README.md  demo.ipynb  facebook_collection.json  facebook_items.json
demo/keto/: .gitignore  README.md  keto.yml  migrate.sh  namespaces.keto.ts  package.json  pnpm-lock.yaml  relationships.json
demo/keycloak/: eoapi-realm.json  eoapi-users-0.json
demo/mair/: level4.json  load.py  rf06.json  rf08.json
demo/noaa/: README.md  demo.ipynb  noaa-emergency-response.json  noaa-eri-nashville2020.json
demo/oam/: OpenAerialMap_demo.ipynb  README.md
deployment/: .env.example  index.html  package-lock.json  package.json  requirements.txt
deployment/aws/: index.html
deployment/cdk/: app.py  config.py
deployment/dockerfiles/: Dockerfile.db  Dockerfile.features  Dockerfile.raster  Dockerfile.stac  Dockerfile.tiler  Dockerfile.vector
deployment/handlers/: cfnresponse.py  db_handler.py  features_handler.py  raster_handler.py  stac_handler.py  tiler_handler.py  vector_handler.py
deployment/kubernetes/: index.html
deployment/kubernetes/argocd/: index.html
dockerfiles/: Dockerfile.browser  Dockerfile.demo  Dockerfile.mair  Dockerfile.raster  Dockerfile.raster-uvicorn  Dockerfile.stac  Dockerfile.stac-uvicorn  Dockerfile.vector  Dockerfile.vector-uvicorn  browser_config.js
docs/: mkdocs.yml  requirements.txt
docs/src/: contributing.md  customization.md  deployment.md  index.md  intro.md  services-details.md  services.md
infrastructure/: DEPLOYMENT.md
infrastructure/aws/: .env.example  browser_config.example.js  config.yaml  requirements-cdk.txt
intro/: index.html
nginx/: nginx.conf
notebooks/: eoAPI_Maxar_Hawaii_demo.ipynb  eoAPI_Maxar_Kahramanmaras_demo.ipynb  getting-started.ipynb
overrides/: home.html  main.html
runtime/eoapi/raster/: MANIFEST.in  pyproject.toml  setup.cfg
runtime/eoapi/raster/eoapi/raster/: __init__.py  app.py  config.py  extension.py
runtime/eoapi/raster/eoapi/raster/templates/: landing.html  map.html  mosaic-browser.html  mosaic-builder.html  mosaic-viewer.html  stac-viewer.html
runtime/eoapi/stac/: README.md  pyproject.toml  setup.cfg
runtime/eoapi/stac/eoapi/stac/: __init__.py  app.py  auth.py  config.py  extension.py
runtime/eoapi/stac/eoapi/stac/templates/: stac-viewer.html
runtime/eoapi/vector/: README.md  pyproject.toml
runtime/eoapi/vector/eoapi/vector/: app.py  config.py
runtime/eoapi/vector/eoapi/vector/templates/: header.html
runtime/spicedb/: schema.zed
search/: search_index.json
services/: index.html
stack/: .env.example
stack/cdk/: app.py  config.py
stack/dockerfiles/: Dockerfile.db  Dockerfile.features  Dockerfile.raster  Dockerfile.stac  Dockerfile.vector
stack/handlers/: features_handler.py  raster_handler.py  stac_handler.py  vector_handler.py
stack/tests/: conftest.py  test_bootstrap.py
stylesheets/: extra.css
website/cogs/: RF06.tif  RF08.tif
(+148 files in other folders)
